Absolute positioning and containers.

--- a/index.html
+++ b/index.html
@@ -12,9 +12,19 @@
 </head>
 
 <body>
+	
+	<div id="info-container">
+		<div id="info">
 
-	<div id="stage">
-        
+		</div>
+	</div>
+
+	<div id="stage-container">
+		<div id="stage-scroll">
+			<div id="stage-scroll-beef"></div>
+		</div>
+		<div id="stage">
+		</div>
 	</div>
 
 	<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
